--- a/src/CSS/Moon.css
+++ b/src/CSS/Moon.css
@@ -1,17 +1,23 @@
-.moonPage {width: auto;}
+.moonPage {
+  width: auto;
+}
 
 .moonPage > img {
   background-color: black;
   float: left;
   padding: 2%;
   margin-left: 5%;
-  border: 2px solid #7C97FB;
+  border: 2px solid #7c97fb;
   border-radius: 100px;
   -webkit-box-shadow: 6px 8px 1000px -4px rgb(255, 249, 168);
   -moz-box-shadow: 6px 8px 1000px -4px rgb(252, 247, 182);
   box-shadow: 6px 8px 1000px -4px rgb(192, 192, 192);
 }
 
-.moonPage > img:hover {border:2px solid rgb(23, 202, 134);}
+.moonPage > img:hover {
+  border: 2px solid rgb(23, 202, 134);
+}
 
-.floodingMoon > img {border: 2px solid red !important;}
+.floodingMoon > img {
+  border: 2px solid red !important;
+}
