--- a/src/CSS/Letter.css
+++ b/src/CSS/Letter.css
@@ -1,15 +1,17 @@
 /* animated letter for information footer */
-*, *:before, *:after{
-  box-sizing:border-box;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-div.foo{
+div.foo {
   width: 90%;
   margin: 0 auto;
   text-align: center;
 }
 
-.letter{
+.letter {
   display: inline-block;
   font-weight: 900;
   font-size: 6em;
@@ -21,54 +23,42 @@ div.foo{
   z-index: 1;
 }
 
-.letter:before, .letter:after{
-  position:absolute;
+.letter:before,
+.letter:after {
+  position: absolute;
   content: attr(data-letter);
   transform-origin: top left;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
 }
 
-.letter, .letter:before, .letter:after{
+.letter,
+.letter:before,
+.letter:after {
   transition: all 0.3s ease-in-out;
 }
 
-.letter:before{
+.letter:before {
   color: rgb(255, 255, 255);
-  text-shadow: 
-    -1px 0px 1px rgba(255,255,255,.8),
-    1px 0px 1px rgba(0,0,0,.8);
+  text-shadow: -1px 0px 1px rgba(255, 255, 255, 0.8),
+    1px 0px 1px rgba(0, 0, 0, 0.8);
   z-index: 3;
-  transform:
-    rotateX(0deg)
-    rotateY(-15deg)
-    rotateZ(0deg);
+  transform: rotateX(0deg) rotateY(-15deg) rotateZ(0deg);
 }
 
-.letter:after{
-  color: rgba(0,0,0,.11);
-  z-index:2;
-  transform:
-    scale(1.08,1)
-    rotateX(0deg)
-    rotateY(0deg)
-    rotateZ(0deg)
-    skew(0deg,1deg);
+.letter:after {
+  color: rgba(0, 0, 0, 0.11);
+  z-index: 2;
+  transform: scale(1.08, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
+    skew(0deg, 1deg);
 }
 
-.letter:hover:before{
+.letter:hover:before {
   color: #fafafa;
-  transform:
-    rotateX(0deg)
-    rotateY(-40deg)
-    rotateZ(0deg);
+  transform: rotateX(0deg) rotateY(-40deg) rotateZ(0deg);
 }
 
-.letter:hover:after{
-  transform:
-    scale(1.08,1)
-    rotateX(0deg)
-    rotateY(40deg)
-    rotateZ(0deg)
-    skew(0deg,22deg);
+.letter:hover:after {
+  transform: scale(1.08, 1) rotateX(0deg) rotateY(40deg) rotateZ(0deg)
+    skew(0deg, 22deg);
 }
